--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@phosphor-icons/react": "^2.1.6",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.30.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
